--- a/ernakulam.html
+++ b/ernakulam.html
@@ -19,7 +19,7 @@
   <br>
 
 <div id="tsr">
-<img src="/images/ernklm-map.png" height="350px" width="500px">
+<img src="images/ernklm-map.png" height="350px" width="500px">
 </div>
 
 <div class="col-lg-6">
@@ -36,15 +36,15 @@
  <div class="carousel-inner">
    
   <div class="carousel-item active" data-bs-interval="3000">
-     <img src="/images/choonda.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/choonda.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
 
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/metro.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/metro.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
   
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/bolgatti.jpg" class="d-block w-100" height="350px" alt="...">   
+     <img src="images/bolgatti.jpg" class="d-block w-100" height="350px" alt="...">   
    </div>
    
   
@@ -71,28 +71,28 @@
 
       
   <div class="card" style="width: 16rem;">
-    <img src="/images/bolgatti.jpg" class="card-img-top" width="170px" height="155px" alt="...">
+    <img src="images/bolgatti.jpg" class="card-img-top" width="170px" height="155px" alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Bolgatti Palace </a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/wonderla.jpg" class="card-img-top" width="170px" height="155px">
+    <img src="images/wonderla.jpg" class="card-img-top" width="170px" height="155px">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Wonderla </a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/thattekkadu.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/thattekkadu.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Thattekkadu bird sanctuary </a></h6>
     </div>
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/paniyeli-poru-echo-tourism.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/paniyeli-poru-echo-tourism.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Paniyeli poru</a></h6>
     </div>
