--- a/alappuzha.html
+++ b/alappuzha.html
@@ -21,7 +21,7 @@
   <br>
 
 <div id="tsr">
-<img src="/images/alappuzha-map.png" height="350px" width="500px">
+<img src="images/alappuzha-map.png" height="350px" width="500px">
 </div>
 
 <div class="col-lg-6">
@@ -38,15 +38,15 @@
  <div class="carousel-inner">
    
   <div class="carousel-item active" data-bs-interval="3000">
-     <img src="/images/Alleppey_beach.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/Alleppey_beach.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
 
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/coir museum.jpg" class="d-block w-100" height="350px" alt="...">
+     <img src="images/coir museum.jpg" class="d-block w-100" height="350px" alt="...">
    </div>
   
    <div class="carousel-item" data-bs-interval="3000">
-     <img src="/images/night-stay-houseboat.jpg" class="d-block w-100" height="350px" alt="...">   
+     <img src="images/night-stay-houseboat.jpg" class="d-block w-100" height="350px" alt="...">   
    </div>
     
  
@@ -72,28 +72,28 @@
 
       
   <div class="card" style="width: 16rem;">
-    <img src="/images/coir-museum2.png" class="card-img-top" width="170px" height="155px" alt="...">
+    <img src="images/coir-museum2.png" class="card-img-top" width="170px" height="155px" alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Coir Museum </a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/alapy beach.jpeg" class="card-img-top" width="170px" height="155px">
+    <img src="images/alapy beach.jpeg" class="card-img-top" width="170px" height="155px">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Alapuzha Beach</a></h6>
     </div>
   </div>
 
   <div class="card" style="width: 16rem;">
-    <img src="/images/krishnapuram-palace-3330.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/krishnapuram-palace-3330.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#"> Krishnapuram Palace</a></h6>
     </div>
   </div>
   
   <div class="card" style="width: 16rem;">
-    <img src="/images/vembanad-lake.jpg" class="card-img-top" width="170px" height="155px alt="...">
+    <img src="images/vembanad-lake.jpg" class="card-img-top" width="170px" height="155px alt="...">
     <div class="card-body">
       <h6 class="card-title"><a href="#">Vembanad Lake </a></h6>
     </div>
